<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_title_hint"
        android:textSize="14sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_details_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_content_hint"
        android:textSize="14sp"
        />

    <Button android:id="@+id/news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <CheckBox android:id="@+id/news_passed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/news_passed_label"
        />

</LinearLayout>

